[package]
name = "longriff"
version = "1.0.0"
authors = ["Bill Kudo <bluesky42624@gmail.com>", "Francesco Bertolaccini <francesco@bertolaccini.dev>"]
description = "This crate provides utilities for reading and writing LONGRIFF formatted files"
repository = "https://github.com/Bill13579/longriff"
readme = "README.md"
license = "MIT"
edition = "2021"
